fix(material/button): do not show hover state on devices that don't support hover
Disables the hover state for buttons on devices that don't support it (e.g. touch devices) since it can look off.

Fixes #31841.

--- a/src/material/button/_button-base.scss
+++ b/src/material/button/_button-base.scss
@@ -82,8 +82,10 @@
     background-color: token-utils.slot($disabled-state-layer-color-token, $fallbacks);
   }
 
-  &:hover > .mat-mdc-button-persistent-ripple::before {
-    opacity: token-utils.slot($hover-state-layer-opacity-token, $fallbacks);
+  @media (hover: hover) {
+    &:hover > .mat-mdc-button-persistent-ripple::before {
+      opacity: token-utils.slot($hover-state-layer-opacity-token, $fallbacks);
+    }
   }
 
   &.cdk-program-focused,
